--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "recharts": "^2.15.2"
+    "recharts": "^2.15.2",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@types/recharts": "^1.8.29",
