--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
-  "name": "hydraulic-store-fe-tailwind",
-  "version": "1.0.0",
+  "name": "ktm-hydraulic-store",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/styled-components": "^5.1.34",
+    "aos": "^2.3.4",
     "axios": "^1.6.0",
+    "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.0",
     "recharts": "^2.15.2",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "styled-components": "^6.1.19",
+    "swiper": "^8.4.7",
+    "typescript": "^4.9.0"
   },
   "devDependencies": {
     "@types/recharts": "^1.8.29",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "vite": "^5.0.0"
+    "tailwindcss": "^3.2.0",
+    "vite": "^4.2.0"
   }
 }
