--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.34",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
