--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "framer-motion": "^10.18.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.0",
     "recharts": "^2.15.2",
     "serve": "^14.2.4",
